--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: scala
 jdk:
-- oraclejdk8
+- oraclejdk9
 scala:
-- 2.12.3
+- 2.12.4
 script:
 -  sbt test
+branches:
+  only:
+    - master
+    - /^\d\.\d+$/
 # These directories are cached to S3 at the end of the build
 cache:
   directories:
